adding my classmate's webpage

--- a/html_css_example.html
+++ b/html_css_example.html
@@ -10,7 +10,7 @@
 <body>
     <header style="background-color:gray; text-align:center;">
         <br>
-        <h1>LTUC - ASAC</h1>
+        <h1 style="font-family: 'Courier New', Courier, monospace;">LTUC - ASAC</h1>
         <h2>Web Development Program</h2>
         <nav style="text-align:left;">
             <ul>
