changing the font of the .html page

--- a/html_css_example.html
+++ b/html_css_example.html
@@ -11,25 +11,25 @@
     <header style="background-color:gray; text-align:center;">
         <br>
         <h1 style="font-family: 'Courier New', Courier, monospace;">LTUC - ASAC</h1>
-        <h2>Web Development Program</h2>
+        <h2 style="font-family: 'Courier New', Courier, monospace;">Web Development Program</h2>
         <nav style="text-align:left;">
             <ul>
-                <li><a href="http://www.ltuc.com/">LTUC Website</a></li>
-                <li><a href="https://asac.ltuc.com/">ASAC Website</a></li>
+                <li><a href="http://www.ltuc.com/" style="font-family: 'Courier New', Courier, monospace;">LTUC Website</a></li>
+                <li><a href="https://asac.ltuc.com/" style="font-family: 'Courier New', Courier, monospace;">ASAC Website</a></li>
             </ul>
         </nav>
         <br>
     </header>
 
     <main style="text-align:center;">
-        <p>In this Code102 Course we are learning how to use HTML.</p>
-        <p>Also, we are adding some CSS for the page to look more presentable.</p>
+        <p style="font-family: 'Courier New', Courier, monospace;">In this Code102 Course we are learning how to use HTML.</p>
+        <p style="font-family: 'Courier New', Courier, monospace;">Also, we are adding some CSS for the page to look more presentable.</p>
         <img style="width:200px;" src="logo.png" alt="logo of html and css">
     </main>
 
     <footer style="background-color:gray; text-align:center;">
         <br>
-        This Sample Page was created by Reema.
+        <p style="font-family: 'Courier New', Courier, monospace;">This Sample Page was created by Reema.</p>
         <br>
         <br>
     </footer>
