moving the webpages to a different repo

--- a/html_css_example.html
+++ b/html_css_example.html
@@ -14,22 +14,28 @@
         <h2 style="font-family: 'Courier New', Courier, monospace;">Web Development Program</h2>
         <nav style="text-align:left;">
             <ul>
-                <li><a href="http://www.ltuc.com/" style="font-family: 'Courier New', Courier, monospace;">LTUC Website</a></li>
-                <li><a href="https://asac.ltuc.com/" style="font-family: 'Courier New', Courier, monospace;">ASAC Website</a></li>
+                <li><a href="http://www.ltuc.com/" style="font-family: 'Courier New', Courier, monospace;">LTUC
+                        Website</a></li>
+                <li><a href="https://asac.ltuc.com/" style="font-family: 'Courier New', Courier, monospace;">ASAC
+                        Website</a></li>
             </ul>
         </nav>
         <br>
     </header>
 
     <main style="text-align:center;">
-        <p style="font-family: 'Courier New', Courier, monospace;">In this Code102 Course we are learning how to use HTML.</p>
-        <p style="font-family: 'Courier New', Courier, monospace;">Also, we are adding some CSS for the page to look more presentable.</p>
+        <p style="font-family: 'Courier New', Courier, monospace;">In this Code102 Course we are learning how to use
+            HTML.</p>
+        <p style="font-family: 'Courier New', Courier, monospace;">Also, we are adding some CSS for the page to look
+            more presentable.</p>
         <img style="width:200px;" src="logo.png" alt="logo of html and css">
     </main>
 
     <footer style="background-color:gray; text-align:center;">
         <br>
-        <p style="font-family: 'Courier New', Courier, monospace;">This Sample Page was created by Reema.</p>
+        <p style="font-family: 'Courier New', Courier, monospace;">
+            This Sample Page was created by Reema on January-2021.
+        </p>
         <br>
         <br>
     </footer>
